--- a/Part_4_Delivering_the_Data/Ch.12_Delivering_the_Data/templates/winner_list.html
+++ b/Part_4_Delivering_the_Data/Ch.12_Delivering_the_Data/templates/winner_list.html
@@ -4,8 +4,7 @@
     <h2>{{ heading }}</h2>
     <ul>
         {% for winner in winners %}
-        <li><a href="{{ 'http://wikipedia.com/wiki/'
-                     + winner.name }}">
+        <li><a href="{{ 'http://wikipedia.com/wiki/' + winner.name }}">
             {{ winner.name }}</a>
             {{ ', category: ' + winner.category }}
         </li>
